app/assets/stylesheets/page_bundles/merge_requests.scss
/* ... */
.mr-widget-alert-container {
  $radius: $border-radius-default - 1px;

  border-radius: $radius $radius 0 0;

  .gl-alert:not(:last-child) {
    margin-bottom: 1px;
  }
}

.mr-widget-body,
.mr-widget-content {
  padding: $gl-padding;
}

.mr-widget-border-top {
  border-top: 1px solid var(--border-color, $border-color);
}

.mr-widget-extension {
  border-top: 1px solid var(--border-color, $border-color);
  background-color: var(--gray-10, $gray-10);

  &.clickable:hover {
    background-color: var(--gray-50, $gray-50);
    cursor: pointer;
  }
}

.mr-widget-extension-icon::before {
  @include gl-content-empty;
  @include gl-absolute;
  @include gl-left-0;
  @include gl-top-0;
  @include gl-opacity-3;
  @include gl-border-solid;
  @include gl-border-4;
  @include gl-rounded-full;

  width: 24px;
  height: 24px;
}

.mr-widget-heading {
  position: relative;
  border: 1px solid var(--border-color, $border-color);
  border-radius: $border-radius-default;
  background: var(--white, $white);

  .gl-skeleton-loader {
    display: block;
  }
}

.mr-widget-info {
  padding-left: $gl-padding;
  padding-right: $gl-padding;
}

.mr-widget-margin-left {
  margin-left: $mr-widget-margin-left;
}

.mr-widget-section {
  .code-text {
    flex: 1;
  }
}

.mr-widget-workflow {
  margin-top: $gl-padding;
  position: relative;

  &:not(:last-child)::before {
    content: '';
    border-left: 1px solid var(--gray-100, $gray-100);
    position: absolute;
    left: 28px;
    bottom: -17px;
    height: 16px;
  }
}

.mr-version-controls {
  background: var(--white, $white);
  color: var(--gl-text-color, $gl-text-color);

  .mr-version-menus-container {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    padding: 16px;
    z-index: 199;
    white-space: nowrap;

    .gl-dropdown-toggle {
      width: auto;
      max-width: 170px;

      svg {
        top: 10px;
        right: 8px;
      }
    }
  }

  .content-block {
    padding: $gl-padding-8 $gl-padding;
    border-bottom: 0;
  }

  .mr-version-dropdown,
  .mr-version-compare-dropdown {
    margin: 0 $gl-spacing-scale-1;

    .dropdown-toggle.gl-button {
      padding: $gl-spacing-scale-2 2px $gl-spacing-scale-2 $gl-spacing-scale-2;
      font-weight: $gl-font-weight-bold;

      .gl-button-icon {
        margin-left: $gl-spacing-scale-1;
      }
    }
  }

  .dropdown-title {
    color: var(--gl-text-color, $gl-text-color);
  }
}

.mr-section-container .resize-observer > object {
  height: 0;
}

// TODO: Move to GitLab UI
.mr-extenson-scrim {
  background: linear-gradient(to bottom, rgba($gray-light, 0), rgba($gray-light, 1));

  .gl-dark & {
    background: linear-gradient(to bottom, rgba(#333, 0), rgba(#333, 1));
  }
}

.attention-request-sidebar-popover {
  z-index: 999;
}

.merge-request-overview {
  @include media-breakpoint-up(lg) {
    display: grid;
    grid-template-columns: calc(95% - 285px) auto;
    grid-gap: 5%;
  }
}

.container-fluid:not(.container-limited) {
  .detail-page-header,
  .detail-page-description,
  .merge-request-tabs-container {
    &.is-merge-request {
      @include gl-mx-auto;
      max-width: $fixed-layout-width - ($gl-padding * 2);
    }
  }
}

.submit-review-dropdown {
  .dropdown-menu {
    width: 650px;
    max-width: 650px;

    .gl-new-dropdown-inner {
      max-height: none !important;
    }

    .md-header {
      .gl-tab-nav-item {
        @include gl-text-gray-900;
        @include gl-pb-5;

        &:hover {
          @include gl-bg-none;
          @include gl-text-gray-900;

          &:not(.gl-tab-nav-item-active) {
            @include gl-inset-border-b-2-gray-200;
          }
        }
      }

      .gl-tab-nav-item-active {
        @include gl-font-weight-bold;
        @include gl-text-gray-900;
        @include gl-inset-border-b-2-theme-accent;

        &:active,
        &:focus,
        &:focus:active {
          box-shadow: inset 0 -#{$gl-border-size-2} 0 0 var(--gl-theme-accent, $theme-indigo-500),
            $focus-ring;
          @include gl-outline-none;
        }
      }
    }
  }

  .gl-new-dropdown-contents {
    padding: $gl-spacing-scale-4 !important;
  }

  .md-preview-holder {
    max-height: 180px;
    height: 180px;
  }
}

